fix: allow all CORS origins with pattern wildcard, expose headers, permit OPTIONS preflight in security